Bug 1350687 - fix crash when protocol is aborted before fully initialised. r=rkent